Content is now my CV

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -10,71 +10,90 @@
     <canvas id="bg"></canvas> <main>
 
       <header>
-        <h1>Hello</h1>
-        <p> Welcome to my website!</p>
+        <h1>Max Hendess</h1>
       </header>
-
-
-      <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
-      </blockquote>
-
+      
+<blockquote>
+  <p>
+    Extremely motivated to
+    constantly develop my skills
+    and grow professionally. I am
+    confident in my ability to
+    come up with interesting
+    solutions to any problem.
+  </p>
+</blockquote>
       <section>
-        <h2>Manifesto</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
+        <img src="Max.jpg" alt="Max">
+        <h2>Skills</h2>
+        <ul>
+          <li>C#</li>
+          <li>Javascript</li>
+          <li>React & React Native</li>
+          <li>SQL Database</li>
+          <li>Git</li>
+          <li>HTML & CSS</li>
+          <li>Docker</li>
+          <li>Redis</li>
+          <li>Umbraco</li>
+          <li>Bootstrap</li>
+        </ul>
       </section>
 
       <section class="light">
-        <h2>Projects</h2>
-
+        <h2>Education</h2>
+        <h3>WebbTeknik - Linné University</h3>
+        <p>AUG2021 - (ongoing)</p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Frontend Developer, HTML, CSS, JS
         </p>
-
-        <h2> Accomplishments</h2>
-
+        <h3>EC Utbildning</h3>
+        <p>AUG2018 - May 2020</p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+         Fullstak Web/System Developer
+         </p>
 
       </section>
-
-      <blockquote>
-        <p>The best way out is always through <br>-Robert Frost</p>
-      </blockquote>
 
       <section class="left">
-        <h2> Work History</h2>
+        <h2> Work Experience</h2>
 
-        <h3>Termina</h3>
+        <h3>Visma Enterprise AB</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Azeroth</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Wraeclast</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          AUG 2019 - NOV 2019 & FEB 2020 - MAY 2020 </p>
+          <p>
+            Worked on implementing new features in the payment
+system Agda PS such as Resourse file translations, API
+integration, Bootstrap design, User privilege settings.
 
+          </p>
+        <h3>Wellplast AB</h3>
+        <p>
+          JAN 2017 - MAY 2017
+        </p>
+        <p>Factory Worker</p>
+        <h3>Willys AB</h3>
+        <p>
+          JAN 2016 - DEC 2016
+         </p>
+         <p>
+           Cashier
+         </p>
+         <h3>Swedwood AB (Ikea Industries)</h3>
+         <p>
+          MAY 2011 - AUG 2011
+          </p>
+          <p>
+            Factory Worker
+          </p>
       </section>
 
-      <blockquote>
-        <p>Space!</p>
-      </blockquote>
+      <section class="left">
+        <h3>Contact Info</h3>
+        <p>maxhendess@gmail.com</p>
+        <p>Tel:0768472728</p>
+        <p>Stinsgatan 10, 262 52 Ängelohlm</p>
+      </section>
 
 
     </main>
